Improve encapsulation of ProtoStream SPIs.